--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,19 +7,24 @@ license = "GNU General Public License v3 (GPLv3)"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-bs4 = "^0.0.1"
-termcolor = "^2.0.1"
-httpx = "^0.23.0"
-trio = "^0.22.0"
-black = "^22.10.0"
-isort = "^5.10.1"
-tqdm = "^4.64.1"
+
+# docs
 Sphinx = "^5.3.0"
 sphinx-autoapi = "^2.0.0"
 sphinx-autodoc-typehints = "^1.19.4"
 sphinx-rtd-theme = "^1.0.0"
 
+# code quality
+black = "^22.10.0"
+isort = "^5.10.1"
+
+
 [tool.poetry.dev-dependencies]
+bs4 = "^0.0.1"
+termcolor = "^2.0.1"
+httpx = "^0.23.0"
+trio = "^0.22.0"
+tqdm = "^4.64.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
