--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -9,4 +9,4 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-custom: ['https://btc.com/1FHDM49QfZX6pJmhjLE5tB2K6CaTLMZpXZ'] # Replace with up to 4 custom sponsorship URLs e.g., ['https://btc.com/1FHDM49QfZX6pJmhjLE5tB2K6CaTLMZpXZ']
+custom: ["https://btc.com/1FHDM49QfZX6pJmhjLE5tB2K6CaTLMZpXZ"] # Replace with up to 4 custom sponsorship URLs e.g., ['https://btc.com/1FHDM49QfZX6pJmhjLE5tB2K6CaTLMZpXZ']
